--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,7 @@
 [build]
   command = """
-    sed -i 's|baseUrl:.*|baseUrl: "/",|I' docusaurus.config.js
-    sed -i 's|rgba(239,[[:space:]]*83,[[:space:]]*80,[[:space:]]*0.56)|rgba(239, 83, 80, 0.9)|gI' node_modules/prism-react-renderer/dist/index.js
-    npm run build
-    for file in `find build/assets/css -type f -name '*.css'`; do
-      npx -y purgecss \
-          --css ${file} \
-          --content "build/**/*.{html,js}" \
-          --variables \
-          --keyframes \
-          --output ${file}
-    done
+  wget https://raw.githubusercontent.com/pranabdas/espresso/refs/heads/main/scripts/build_docusaurus.sh
+  bash build_docusaurus.sh
   """
 
   publish = "build"
